# projet_catamaran

./: main.py  show_log.py  simulateur.py
ROScata/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ROScata/devel/include/commande/: Control.h  Etat.h  Waypoint.h  WaypointRequest.h  WaypointResponse.h
ROScata/devel/lib/commande/: commande_node  waypoint_node
ROScata/devel/lib/pkgconfig/: Sensor.pc  commande.pc
ROScata/devel/lib/python2.7/dist-packages/commande/msg/: _Control.py  _Etat.py  __init__.py
ROScata/devel/lib/python2.7/dist-packages/commande/srv/: _Waypoint.py
ROScata/devel/share/Sensor/cmake/: SensorConfig.cmake
ROScata/devel/share/commande/cmake/: commande-msg-extras.cmake  commande-msg-paths.cmake  commandeConfig.cmake
ROScata/devel/share/common-lisp/ros/commande/msg/: Control.lisp  Etat.lisp  _package.lisp  _package_Control.lisp  _package_Etat.lisp  commande-msg.asd
ROScata/devel/share/common-lisp/ros/commande/srv/: Waypoint.lisp  _package.lisp  _package_Waypoint.lisp  commande-srv.asd
ROScata/devel/share/gennodejs/ros/commande/msg/: Control.js  Etat.js  _index.js
ROScata/devel/share/gennodejs/ros/commande/srv/: Waypoint.js  _index.js
ROScata/devel/share/roseus/ros/commande/: manifest.l
ROScata/devel/share/roseus/ros/commande/msg/: Control.l  Etat.l
ROScata/devel/share/roseus/ros/commande/srv/: Waypoint.l
ROScata/src/Sensor/: CMakeLists.txt
ROScata/src/commande/: CMakeLists.txt  package.xml
ROScata/src/commande/msg/: Control.msg  Etat.msg
ROScata/src/commande/src/: regulation.cpp  waypoints.cpp
ROScata/src/commande/srv/: Waypoint.srv
ROScata/src/sensor/: CMakeLists.txt  package.xml
ROScata/src/sensor/include/: gpsdclient.h
ROScata/src/sensor/msg/: GnssPose.msg
ROScata/src/sensor/src/: NodeBoussole.cpp  NodeConvertGPS.cpp  NodeGPS.cpp  NodeIMU.cpp  client.cpp
